--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="main.css">   
     <link rel="stylesheet" href="reset.css">
 </head>
+
+<body>
     <header class="header-main">
         <h1 class="engk">My Portfolio</h1>   
         <div class="header-main-logo"></div>
