--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="contact-info">
         <h2 class="contact-head">Contact Me</h2>
-        <p class="cp-num">Cellphone Number: 09615335984</p>
+        <p class="cp-num">Cellphone Number: 0961533****</p>
         <p class="email-ad">Email Address: carldavid.ortega@cvsu.edu.ph</p>
         <p class="my-account">Accounts: <a class="fb-link" href="https://www.facebook.com/dibvidddd" target="_blank">Facebook</a> 
             <a class="ig-link" href="https://www.instagram.com/dibvidddd/" target="_blank">Instagram</a></p> 
