--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craid Portfolio</title>
-    <link rel="icon" href="img/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">   
 </head>
